--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "classnames": "^2.2.6",
     "clsx": "^1.1.1",
     "formik": "^2.2.6",
+    "formik-material-ui": "^3.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
