--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-router-dom": "^5.1.7",
     "classnames": "^2.2.6",
     "clsx": "^1.1.1",
+    "date-fns": "^2.17.0",
     "formik": "^2.2.6",
     "formik-material-ui": "^3.0.1",
     "react": "^17.0.1",
